UP-344 cleaned code and adapted README.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,17 +11,15 @@ if (NOT DEFINED ENV{IDF_PATH})
     else ()
         message(FATAL_ERROR "ESP-IDF: set $ESP_IDF environment variable or write path to file $ENV{HOME}/.idf")
     endif ()
-else ()
-    set(IDF_PATH "/home/ESP/test2/esp-idf")
 endif ()
 message(STATUS "IDF_PATH: ${IDF_PATH}")
 
 # add some necessary defnitions
 add_definitions(-DRANDOMBYTES_DEFAULT_IMPLEMENTATION)
 
-# set the components, EXCLUDING libsodium, because of the conflict with ubirch-mbed-nacl-cm0
-set(COMPONENTS soc;log;heap;freertos;vfs;newlib;esp_ringbuf;driver;esp_event;ethernet;lwip;tcpip_adapter;partition_table;app_update;spi_flash;mbedtls;micro-ecc;bootloader_support;nvs_flash;pthread;smartconfig_ack;wpa_supplicant;xtensa-debug-module;esp32;cxx;app_trace;asio;jsmn;aws_iot;bootloader;bt;coap;console;nghttp;esp-tls;esp_adc_cal;tcp_transport;esp_http_client;esp_http_server;esp_https_ota;esptool_py;expat;wear_levelling;sdmmc;fatfs;freemodbus;idf_test;json;mdns;mqtt;openssl;protobuf-c;protocomm;spiffs;ulp;wifi_provisioning)
-
+# set the components, EXCLUDING libsodium, because of the conflict with  ubirch-mbed-nacl-cm0;
+set(COMPONENTS soc;log;heap;freertos;vfs;newlib;esp_ringbuf;driver;esp_event;ethernet;tcpip_adapter;lwip;mbedtls;micro-ecc;bootloader_support;nvs_flash;xtensa-debug-module;app_trace;esp32;bootloader;bt;coap;console; esp_http_client; esptool_py; idf_test; ulp;wifi_provisioning; ethernet; partition_table;app_update;spi_flash; pthread;smartconfig_ack;wpa_supplicant; cxx;asio;jsmn;aws_iot; nghttp;esp-tls;esp_adc_cal;tcp_transport; esp_http_server;esp_https_ota; expat;wear_levelling;sdmmc;fatfs;freemodbus; json;mdns;mqtt;openssl;protobuf-c;protocomm;spiffs;)
+#---------------x---x---x----x--------x---x------x-----------x------x---------x--------x-----------------------------------------------------------------x-------------------x-------------------------------------------------------------------------------------------------------
 list(APPEND COMPONENTS main)
 #set(CMAKE_VERBOSE_MAKEFILE 1)
 
