--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "components/arduino-esp32"]
 	path = components/arduino-esp32
 	url = https://github.com/ubirch/arduino-esp32.git
+[submodule "components/ubirch-esp32-networking"]
+	path = components/ubirch-esp32-networking
+	url = https://github.com/ubirch/ubirch-esp32-networking
