--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,9 +4,6 @@ set(COMPONENT_SRCS
         util.c
         settings.h
         ubirch_proto_http.c
-        cmd_system.c
-        ubirch_console.c
-        console_cmd.c
         storage.c
         temp_temp.c
         )
@@ -16,6 +13,7 @@ set(COMPONENT_ADD_INCLUDEDIRS "${CMAKE_CURRENT_LIST_DIR}")
 set(COMPONENT_DEPENDS
         arduino-esp32
         ubirch-esp32-networking
+        ubirch-esp32-console
         ubirch-mbed-msgpack
         ubirch-mbed-nacl-cm0
         ubirch-protocol
