fix console components dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "components/components/ubirch-esp32-console"]
 	path = components/components/ubirch-esp32-console
 	url = https://github.com/ubirch/ubirch-esp32-console
+[submodule "components/ubirch-esp32-console"]
+	path = components/ubirch-esp32-console
+	url = https://github.com/ubirch/ubirch-esp32-console
