--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,8 +2,6 @@ set(COMPONENT_SRCS
         main.c
         key_handling.c
         util.c
-        settings.h
-        ubirch_proto_http.c
         temp_temp.c
         )
 
@@ -11,12 +9,13 @@ set(COMPONENT_ADD_INCLUDEDIRS "${CMAKE_CURRENT_LIST_DIR}")
 
 set(COMPONENT_DEPENDS
         arduino-esp32
-        ubirch-esp32-networking
+        ubirch-esp32-api-http
         ubirch-esp32-console
+        ubirch-esp32-networking
+        ubirch-esp32-storage
         ubirch-mbed-msgpack
         ubirch-mbed-nacl-cm0
         ubirch-protocol
-        ubirch-esp32-storage
         )
 
 register_component()
