--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
+#set(CMAKE_VERBOSE_MAKEFILE 1)
+
 # check and set the IDF_PATH
 message(STATUS "$ENV{IDF_PATH}")
 if (NOT DEFINED ENV{IDF_PATH})
@@ -20,7 +22,9 @@ message(STATUS "IDF_PATH: ${IDF_PATH}")
 add_definitions(-DRANDOMBYTES_DEFAULT_IMPLEMENTATION)
 
 # set the components, EXCLUDING libsodium, because of the conflict with ubirch-mbed-nacl-cm0
-set(COMPONENTS soc;log;heap;freertos;vfs;newlib;driver;ethernet;lwip;tcpip_adapter;partition_table;app_update;spi_flash;mbedtls;micro-ecc;bootloader_support;nvs_flash;pthread;smartconfig_ack;wpa_supplicant;xtensa-debug-module;esp32;cxx;app_trace;jsmn;aws_iot;bootloader;bt;coap;console;nghttp;esp-tls;esp_adc_cal;esp_http_client;esp_https_ota;esptool_py;expat;wear_levelling;sdmmc;fatfs;idf_test;json;mdns;openssl;spiffs;ulp)
+#set(COMPONENTS soc;log;heap;freertos;vfs;newlib;driver;ethernet;lwip;tcpip_adapter;partition_table;app_update;spi_flash;mbedtls;micro-ecc;bootloader_support;nvs_flash;pthread;smartconfig_ack;wpa_supplicant;xtensa-debug-module;esp32;cxx;app_trace;jsmn;aws_iot;bootloader;bt;coap;console;nghttp;esp-tls;esp_adc_cal;esp_http_client;esp_https_ota;esptool_py;expat;wear_levelling;sdmmc;fatfs;idf_test;json;mdns;openssl;spiffs;ulp)
+
+set(EXTRA_COMPONENT_DIRS ${CMAKE_CURRENT_LIST_DIR}/components ${CMAKE_CURRENT_LIST_DIR}/main)
 
 # set the components local to our project
 set(PROJECT_COMPONENTS
@@ -49,12 +53,8 @@ foreach (C_DIR ${PROJECT_COMPONENTS})
             execute_process(COMMAND "${CMAKE_COMMAND}" -E ${LINK_OR_COPY} "${ESP32CMAKE}" "${CMAKELISTSTXT}"
                     WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/components/${C_DIR}")
         endif ()
-    else ()
-        list(APPEND COMPONENTS ${C_DIR})
     endif ()
 endforeach ()
-list(APPEND COMPONENTS main)
-#set(CMAKE_VERBOSE_MAKEFILE 1)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
