fix memory issues, reduce logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ if (NOT DEFINED ENV{IDF_PATH})
         file(STRINGS "$ENV{HOME}/.idf" IDF_PATH)
         set(ENV{IDF_PATH} ${IDF_PATH})
     else ()
-        message(FATAL_ERROR "ESP-IDF: set $ESP_IDF environment variable or write path to file $ENV{HOME}/.idf")
+        message(FATAL_ERROR "ESP-IDF: set $IDF_PATH environment variable or write path to file $ENV{HOME}/.idf")
     endif ()
 else ()
     set(IDF_PATH $ENV{IDF_PATH})
