--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "components/ubirch-esp32-api-http"]
 	path = components/ubirch-esp32-api-http
 	url = https://github.com/ubirch/ubirch-esp32-api-http
+[submodule "components/ubirch-esp32-ota"]
+	path = components/ubirch-esp32-ota
+	url = https://github.com/ubirch/ubirch-esp32-ota
