--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(COMPONENT_SRCS
         main.c
+        firmware_update.c
         key_handling.c
         util.c
         temp_temp.c
@@ -12,10 +13,12 @@ set(COMPONENT_REQUIRES
         ubirch-esp32-api-http
         ubirch-esp32-console
         ubirch-esp32-networking
+        ubirch-esp32-ota
         ubirch-esp32-storage
         ubirch-mbed-msgpack
         ubirch-mbed-nacl-cm0
         ubirch-protocol
+        nvs_flash
         )
 
 register_component()
