now with pppos and GSM modem functionality

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -18,6 +18,7 @@ set(COMPONENT_REQUIRES
         ubirch-protocol
         ubirch-esp32-key-storage
         nvs_flash
+        ubirch-pppos
         )
 
 register_component()
