--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "components/ubirch-esp32-key-storage"]
 	path = components/ubirch-esp32-key-storage
 	url = https://github.com/ubirch/ubirch-esp32-key-storage.git
+[submodule "components/ubirch-pppos"]
+	path = components/ubirch-pppos
+	url = https://github.com/ubirch/ubirch-pppos
