NFC read and write pages now works

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "components/ubirch-esp32-key-storage"]
 	path = components/ubirch-esp32-key-storage
 	url = https://github.com/ubirch/ubirch-esp32-key-storage.git
+[submodule "components/esp-pn532"]
+	path = components/esp-pn532
+	url = https://github.com/lucafaccin/esp-pn532.git
