--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,9 +2,12 @@ set(COMPONENT_SRCS
         main.c
         sensor.c
         util.c
+        ubirch-protocol-c8y/ubirch-protocol-c8y.c
         )
 
-set(COMPONENT_ADD_INCLUDEDIRS "${CMAKE_CURRENT_LIST_DIR}")
+set(COMPONENT_ADD_INCLUDEDIRS
+        "${CMAKE_CURRENT_LIST_DIR}"
+        ${CMAKE_CURRENT_LIST_DIR}/ubirch-protocol-c8y)
 
 set(COMPONENT_REQUIRES
         arduino-esp32
@@ -19,5 +22,6 @@ set(COMPONENT_REQUIRES
         ubirch-esp32-key-storage
         nvs_flash
         )
+set(COMPONENT_PRIV_REQUIRES esp_http_client)
 
 register_component()
