WIP: snmp now works with integer, not yet stream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,14 @@ endif ()
 message(STATUS "IDF_PATH: ${IDF_PATH}")
 
 # add some necessary defnitions
-add_definitions(-DRANDOMBYTES_DEFAULT_IMPLEMENTATION -DLWIP_SNMP -DSNMP_LWIP_MIB2 -DMIB2_STATS -DLWIP_RAW)
+add_definitions(
+        -DRANDOMBYTES_DEFAULT_IMPLEMENTATION
+        -DLWIP_SNMP
+        -DSNMP_LWIP_MIB2
+        -DMIB2_STATS=1
+        #-DLWIP_RAW
+        -DSNMP_LWIP_ENTERPRISE_OID=54021
+)
 
 set(EXCLUDE_COMPONENTS libsodium)
 
