--- a/components/decke/CMakeLists.txt
+++ b/components/decke/CMakeLists.txt
@@ -1,8 +1,5 @@
 set(COMPONENT_SRCS "math_d.c")
 
-
-set(COMPONENT_ADD_INCLUDEDIRS ".")
-
-set(COMPONENT_REQUIRES "")
+set(COMPONENT_ADD_INCLUDEDIRS "include")
 
 register_component()
